# QCollimate

./: CMakeLists.txt  Info.plist  Readme.md  main.cpp  mainwindow.ui
Widgets/: colview.cpp  colview.h  colview.ui  gridlayoutdebugger.cpp  gridlayoutdebugger.h  ringwidget.cpp  ringwidget.h  ringwidget.ui
